<resources>
    <string name="app_name">政协Kotlin</string>
    <string name="default_server">yanshi04.suncn.com.cn</string>
    <string name="default_port">gzzx</string>
    <string name="umeng_appkey">596c298007fe657d70001444</string>
    <string name="umeng_message_secret">9848a737d004c7993198b0347513fc9e</string>
    <string name="xiaomi_appid">2882303761518210494</string>
    <string name="xiaomi_appkey">5861821090494</string>
    <string name="meizu_appid">130451</string>
    <string name="meizu_appkey">cb972c119c91400686e631a706a0ebdf</string>
    <string name="oppo_appkey">fa6151c3181f41678e2cd3e020b5dd06</string>
    <string name="oppo_message_secret">3b8fbb82fac84ba79b82a1d395923448</string>
    <string name="xf_mscAppId">5cf0ecc4</string>
    <string name="baidu_map_appkey">yuMaaCwRY0Ay6cKCDGhTLh0sGRCYXlyO</string>
    <string name="aliyun_appkey">29085772</string>
    <string name="aliyun_secret">d054b73431db6a6f1adcfdb640d19a1c</string>
    <string name="sophix_AppId">29085772</string>
    <string name="sophix_AppSecret">d054b73431db6a6f1adcfdb640d19a1c</string>
    <string name="sophix_RSA">MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCiF99yjKdkwRqCZJLmX4gH4Slcj9cg43usiMh3r
        Rn7y4yOOPNjttx8vvm+aGMDQRX/Gc5mGIca7FqjETFAPNkZrsgXkBNVbdRGy0gMrdE4+U7enS+1sRTDMAGB5S8d8yX28992zkDnQk/WYPUltt8YUvruK5SX7Qtx/YeQWZao
        ISBxHRTr6/MvD6oL5e8rKcmSjB8OHqdGCp9U+77Up5GqBbEuyoUhUqv4xe7LznakKkZ4g1U7MCcKYp7zaks6JWOfZYPFgMMsIySXBG1+7yos5qRl6nVafQDD9NxlB8EfPu
        AoDH5Q1pomOaw3G1tQqkSrH3+9hxEFfUkj+uc6G3b5AgMBAAECggEASkDxZYI1dJxZTn5QJSSCJknpLrPd8v0CvKj0XI55prU6MDS6mmU8YBEES0t6gBUixHfH61E1
        Iwo/AxBvJWQ6d99vXgvsL2hepAefe99sRtM+ZBBRuMPkJP4q0pxwlyG5tIVHSx907/uaozRLWPmK/ZOVy+E+8tHuOkvP/DpuH5pCEzHaHObV5wA6
        Lfhu4Pu2JnhRJWSCRZbP0WydpWyxV6DveqC0R5ZdF7AmKb4gq+hmBxlvOQ8pPR8nVXsYNgDmqAqiPTCPNRgL/LMr707nYh33goXuFYeBYMCxZ36cIqMUPCSFWz
        dntZIfFO34tLZs807RozeiebyP9LEAXQyiAQKBgQDcTcJX0jUmHAMxT0lRDoghCO5VNpg9x6XoS1qhAyUzTSrYor2xVWv2qhb9ZaQxf7vx/pQLv91ECOR1YJxm4L3AcVb1Ty
        2799heaj2KJyZfpCrdA2F3D+gVOYBd3hAh1LQBBN6QGLsW2tmTwUs0olwTNNlOLpb0dGC6skLkvAnwIQKBgQC8W4gOtxlMjj8ym75CHBBLy6Vl2xehkSTNEc/I2q520M3Bgrh
        Mlq/OGonIgQ6azhf8PguLBEPx24tBkDD6sqglzoaHtdPEQKmnfPSn8G3RgCTNMjm4bNAbelaY0rjDhUigNtYfeUyNgGXwhwdgJcb5QPcAyHwg/T49svoV6q2L2QKBgBrt2mK3zE1
        jQTSm13R0DUnUeKWr7cInhG03wNVLuCFkPmeKxRtHMNJPCk5hPUfbsFKtZtVk15w4Zgy/CX8925QJhrKnwhRnAGjSHcGkdXldbOvlPOW76QenJrzSpzArevFg8f+1NjFeARihmRrO+
        ehTHnkDEurAyw4nOiwRnDlhAoGASBoFoBRo48xD1tyVXPsfJdSDsNTIW/mSi8l4r5s+U48kZCHk6LR6AbxY5963N30S42TgyEtOswNmcCeBCEZhZW+EQejRcnuKNen4QV0gvKR/8eh6/eTx
        WMNg6MkpHvcjUOkM2Cl3q2buHr+hjCWJ4BoFM1CLa5llPPsJDmCyJCkCgYEAgDGMIOAuYeiSRiih69JZrucclb4D8l9pxTnf2HWc9l+JDCR+MePgNSRH94XyYLe4zf9h/nQgEdezneSzz2Sc
        CCe38ROZMJqsql5e6340xKvKhCX0biArWxihGc1RhFdrjELP6T1JedPgWZsUGo5I7Vrc3SJIErI5OtahE3+DoNY=</string>
    <string name="request_session_timeout">用户验证错误</string>
    <string name="desc">ImageView</string>
    <string name="menu_home">首页</string>
    <string name="menu_lzgl">履职</string>
    <string name="menu_my">我的</string>
    <string name="menu_communication">沟通</string>
    <string name="communication">通讯录</string>
    <string name="menu_news">发现</string>
    <string name="check_finger">点击验证指纹登录</string>
    <string name="font_back">&#xe8ce;</string>
    <string name="font_setting">&#xe689;</string>
    <string name="font_mike">&#xe649;</string>
    <string name="font_keyboard">&#xe672;</string>
    <string name="font_exlv_cos">&#xe7d1;</string>
    <string name="font_exlv_expan">&#xe7d2;</string>
    <string name="font_exlv_cos1">&#xe6b7;</string>
    <string name="font_exlv_expan1">&#xe771;</string>
    <string name="font_user">&#xe613;</string>
    <string name="font_pwd">&#xe611;</string>
    <string name="font_sms">&#xe612;</string>
    <string name="font_fingerprint">&#xe621;</string>
    <string name="font_new">&#xe64a;</string>
    <string name="font_uncheck">&#xe616;</string>
    <string name="font_check">&#xe614;</string>
    <string name="font_c_check">&#xe659;</string>
    <string name="font_c_uncheck">&#xe667;</string>
    <string name="fontion_pwd_gone">&#xe63a;</string>
    <string name="fontion_pwd_visible">&#xe615;</string>
    <string name="font_camera">&#xe617;</string>
    <string name="font_code">&#xe600;</string>
    <string name="font_place">&#xe629;</string>
    <string name="font_type">&#xe64e;</string>
    <string name="font_meet_activity">&#xe64b;</string>
    <string name="font_clear_search">&#xe73d;</string>
    <string name="font_search">&#xe660;</string>
    <string name="font_robot">&#xe65a;</string>
    <string name="font_scan">&#xe62f;</string>
    <string name="font_zan">&#xe65b;</string>
    <string name="font_zaned">&#xe665;</string>
    <string name="font_top">&#xe60d;</string>
    <string name="font_shou">&#xe65e;</string>
    <string name="font_zhuan">&#xe661;</string>
    <string name="font_edit">&#xe663;</string>
    <string name="font_comment">&#xe60d;</string>
    <string name="font_readCount">&#xe68c;</string>
    <string name="font_share">&#xe661;</string>
    <string name="font_send">&#xe68f;</string>
    <string name="font_sort_up">&#xe60e;</string>
    <string name="font_sort_down">&#xe6a3;</string>
    <string name="font_wenhao">&#xe671;</string>
    <string name="font_date">&#xe6be;</string>
    <string name="font_feedback">&#xe668;</string>
    <string name="font_right">&#xe738;</string>
    <string name="font_robot_play">&#xe673;</string>
    <string name="font_robot_pause">&#xe674;</string>
    <string name="font_notice">&#xe793;</string>
    <string name="font_checkbox_check">&#xe7cd;</string>
    <string name="font_checkbox_normal">&#xe7cd;</string>
    <string name="font_call">&#xe680;</string>
    <string name="font_message">&#xe678;</string>
    <string name="font_font_chat">&#xe682;</string>
    <string name="font_add">&#xe657;</string>
    <string name="font_add_circle">&#xe607;</string>
    <string name="font_delete">&#xe68a;</string>
    <string name="font_close">&#xe633;</string>
    <string name="font_robot_close">&#xe63f;</string>
    <string name="font_arrow">&#xe77b;</string>
    <string name="font_dot">&#xe609;</string>
    <string name="font_down">&#xe694;</string>
    <string name="font_up">&#xe693;</string>
    <string name="font_car">&#xe692;</string>
    <string name="font_zd">&#xe695;</string>
    <string name="font_img">&#xe641;</string>
    <string name="font_doc">&#xe636;</string>
    <string name="font_xlsx">&#xe635;</string>
    <string name="font_pdf">&#xe637;</string>
    <string name="font_txt">&#xe634;</string>
    <string name="font_ppt">&#xe648;</string>
    <string name="font_xml">&#xe63e;</string>
    <string name="font_zip">&#xe638;</string>
    <string name="font_log">&#xe645;</string>
    <string name="font_file">&#xe63b;</string>
    <string name="font_eays">&#xe69c;</string>
    <string name="font_audio">&#xe6ce;</string>
    <string name="font_video">&#xe6cb;</string>
    <string name="font_audio_close">&#xe6d0;</string>
    <string name="font_video_close">&#xe6cf;</string>
    <string name="string_message">消息</string>
    <string name="string_circle">圈子</string>
    <string name="string_hot">热点</string>
    <string name="string_application">应用</string>
    <string name="string_duty">履职</string>
    <string name="string_message_notice">消息提醒</string>
    <string name="string_tips">提示</string>
    <string name="string_cancle">取消</string>
    <string name="string_confirm">确认</string>
    <string name="string_send_dynamic">发动态</string>
    <string name="string_scan">扫一扫</string>
    <string name="string_search">搜索</string>
    <string name="string_duty_idcard">电子履职卡</string>
    <string name="string_init_video_meeting_failed">视频会议未初始化成功，请联系管理员</string>
    <string name="string_loginout_tip">您的账号在其他设备登录，如非本人操作，请确认账号是否被盗，并及时修改登录密码。</string>
    <string name="string_im_login_failed">IM未登录成功，请重新登录</string>
    <string name="string_is_del_reply">是否删除该会话？</string>
    <string name="string_notice_announcement">通知公告</string>
    <string name="string_video_meeting">视频会议</string>
    <string name="string_follow">关注</string>
    <string name="string_have_alerday_followed">您已成功关注</string>
    <string name="string_please_enter_comments">请输入评论内容</string>
    <string name="string_wechat">微信</string>
    <string name="string_friend_circle">朋友圈</string>
    <string name="string_qq">QQ</string>
    <string name="string_weibo">微博</string>
    <string name="string_delete">删除</string>
    <string name="string_edit">编辑</string>
    <string name="string_my_follow">我的关注</string>
    <string name="string_recommend_follow">推荐关注</string>
    <string name="string_is_del_this_dynamic">确定要删除该条动态吗？</string>
    <string name="string_look_more"><![CDATA[查看更多 >]]></string>
    <string name="string_dynamic">动态</string>
    <string name="string_followed">已关注</string>
    <string name="have_alerday_cancle_followed">您已取消关注</string>
    <string name="string_subcripe_success">订阅成功</string>
    <string name="string_cancle_subcripe">已取消订阅</string>
    <string name="string_information_content">资讯内容</string>
    <string name="string_integral">积分</string>
    <string name="string_of_duty">的履职</string>
    <string name="string_join_meeting">参加会议</string>
    <string name="string_join_activity">参加活动</string>
    <string name="string_submit_proposal">提交提案</string>
    <string name="string_social_opinion">社情民意</string>
    <string name="string_social_opinion_submit">提交社情民意</string>
    <string name="string_duty_grade">履职等级</string>
    <string name="string_duty_score">履职得分</string>
    <string name="string_submit">提交</string>
    <string name="string_name">姓名</string>
    <string name="string_proposal_content">提案内容</string>
    <string name="string_activity_name">活动名称</string>
    <string name="string_activity_address">活动地点</string>
    <string name="string_organizer_main">主办单位</string>
    <string name="string_organizer">会办单位</string>
    <string name="string_sector">界别</string>
    <string name="string_partisan">党派</string>
    <string name="string_proposer">提案者</string>
    <string name="string_please_enter_phone_number_and_click_get_verification_code">请输入手机号后点击获取验证码</string>
    <string name="string_please_enter_phone_number">请输入手机号</string>
    <string name="string_get_verification_code">获取验证码</string>
    <string name="string_please_enter_verification_code">请输入验证码</string>
    <string name="string_next_step">下一步</string>
    <string name="string_job_title_no_line">职务</string>
    <string name="string_activity_time">活动时间</string>
    <string name="string_information_confirmed">信息确认</string>
    <string name="string_temporary_storage">暂存</string>
    <string name="string_particular_year">年份</string>
    <string name="string_session">届次</string>
    <string name="string_proposal_type">提案类型</string>
    <string name="string_proposal_status_no_line">提案状态</string>
    <string name="string_proponen_type">提案者类型</string>
    <string name="string_belonging_to_sector">所属界别</string>
    <string name="string_affiliated_special_committee">所属专委会</string>
    <string name="string_please_enter_organizer_main">请输入主办单位</string>
    <string name="string_please_enter_organizer">请输入会办单位</string>
    <string name="string_branch_office_name">分办单位</string>
    <string name="string_please_enter_branch_office_name">请输入分办单位</string>
    <string name="string_please_enter_proposer">请输入提案者</string>
    <string name="string_subject">题目</string>
    <string name="string_please_enter_subject">请输入题目</string>
    <string name="string_please_enter_proposal_content">请输入提案内容</string>
    <string name="string_serial_number">流水号</string>
    <string name="string_please_enter_serial_number">请输入流水号</string>
    <string name="string_proposal_no">提案案号</string>
    <string name="string_please_enter_proposal_no">请输入提案案号</string>
    <string name="string_query">查询</string>
    <string name="string_reset">重置</string>
</resources>