<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <include layout="@layout/view_head_white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/string_please_enter_phone_number_and_click_get_verification_code"
        android:textColor="@color/font_content"
        android:textSize="@dimen/font_normal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.gavin.giframe.widget.GIEditText
            android:id="@+id/et_tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="top"
            android:hint="@string/string_please_enter_phone_number"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/font_title"
            android:textColorHint="@color/font_hint"
            android:textSize="@dimen/font_normal"
            app:maxLength="11" />

        <TextView
            android:id="@+id/btn_get_code"
            style="@style/style_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_margin="6dp"
            android:text="@string/string_get_verification_code"
            android:textColor="@color/white"
            android:textSize="@dimen/font_mini" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg_white" />

    <com.gavin.giframe.widget.GIEditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:hint="@string/string_please_enter_verification_code"
        android:inputType=""
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/font_title"
        android:textColorHint="@color/font_hint"
        android:textSize="@dimen/font_normal" />

    <Button
        android:id="@+id/btn_next"
        style="@style/style_btn_submit"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/string_next_step" />

</LinearLayout>