<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/office_detail_option_popwindow"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal|left"
        android:orientation="horizontal"
        android:paddingLeft="12dp">


        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/string_submit"
            android:textColor="@color/font_content"
            android:textSize="@dimen/font_medium" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal|left"
        android:orientation="horizontal"
        android:paddingLeft="12dp">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/string_temporary_storage"
            android:textColor="@color/font_content"
            android:textSize="@dimen/font_medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal|left"
        android:orientation="horizontal"
        android:paddingLeft="12dp">


        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/string_delete"
            android:textColor="@color/font_content"
            android:textSize="@dimen/font_medium" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal|left"
        android:orientation="horizontal"
        android:paddingLeft="12dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/string_cancle"
            android:textColor="@color/font_content"
            android:textSize="@dimen/font_medium" />
    </LinearLayout>
</LinearLayout>